# RazerSdkReaderCpp

./: .gitignore  README.md
src/: CMakeLists.txt  ChromaEncryption.hpp  ChromaKeyboard.hpp  ChromaMutex.hpp  ChromaReader.hpp  Constants.h  SignaledReader.hpp  Utils.hpp  main.cpp
src/console/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  ChromaAppData.hpp  ChromaCommon.hpp  ChromaEncryption.hpp  ChromaKeyboard.hpp  ChromaMutex.hpp  ChromaReader.hpp  Constants.hpp  MemoryMappedFileReader.hpp  SignaledReader.hpp  Utils.hpp
